openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python 
  labels:
    app: hello-python 
spec:
  ports:
  - name: theport
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-python 
  type: ClusterIP
